# volumeswitcher

./: README.md
VolumeSwitcher/: CMakeLists.txt
VolumeSwitcher/VolumeSwitcher/: CMakeLists.txt  VolumeSwitcher.py
VolumeSwitcher/VolumeSwitcher/Resources/UI/: VolumeSwitcher.ui
